# src/infrastructure/http/routes/guide.routes.ts
@@ -12,5 +12,6 @@ export const guideRoutes = (commandBus: CommandBus, queryBus: QueryBus) => {
     router.post('/:guideId/sections', guideController.addGuideSection);
     router.get('/:guideId', guideController.getGuideById);
     router.post('/:guideId/biblical-references', guideController.addBiblicalReferenceToGuide);
+    router.post('/:guideId/sections/:sectionId/biblical-references', guideController.addBiblicalReferenceToGuideSection);
     return router;
 }
